# ppgso_projekt

./: CMakeLists.txt  README.md  create_shaders.bat
cmake/: bin2c.cmake
ppgso/: shader.cpp  shader.h
shader/: terrain_frag.glsl  terrain_vert.glsl
shader/island_demo/: basic_frag.glsl  basic_vert.glsl  phong_frag.glsl  phong_vert.glsl
src/animation/: animation_controller.cpp  animation_controller.h  interpolation.cpp  interpolation.h  keyframe.cpp  keyframe.h
src/camera/: camera.cpp  camera.h  camera_path.cpp  camera_path.h
src/examples/: island_demo.cpp
src/island_demo/: main.cpp  scene.cpp  scene.h
src/lighting/: directional_light.cpp  directional_light.h  light.cpp  light.h  point_light.cpp  point_light.h  shadow_map.cpp  shadow_map.h  spot_light.cpp  spot_light.h
src/my_project/: my_project.cpp
src/objects/: animated_cube.cpp  animated_cube.h  bird.cpp  bird.h  crab.cpp  crab.h  island.cpp  island.h  object.cpp  object.h  palm_tree.cpp  palm_tree.h  rock.cpp  rock.h  sand_particle.cpp  sand_particle.h  sky_box.cpp  sky_box.h  test_cube.cpp  test_cube.h  water_plane.cpp  water_plane.h  waterfall.cpp  waterfall.h  wave.cpp  wave.h
src/particles/: dust_particles.cpp  dust_particles.h  falling_leaves.cpp  falling_leaves.h  particle_system.cpp  particle_system.h  water_spray.cpp  water_spray.h
src/physics/: collision.cpp  collision.h  force_system.cpp  force_system.h  rigid_body.cpp  rigid_body.h
src/post_processing/: bloom_filter.cpp  bloom_filter.h  blur_filter.cpp  blur_filter.h  framebuffer.cpp  framebuffer.h  tone_mapping.cpp  tone_mapping.h
src/procedural/: rock_generator.cpp  rock_generator.h  terrain_generator.cpp  terrain_generator.h  tree_generator.cpp  tree_generator.h
src/scene_graph/: scene_node.cpp  scene_node.h  transform.cpp  transform.h
src/terrain/: Terrain.cpp  Terrain.h  terrain_frag_glsl.h  terrain_vert_glsl.h
